--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@ h3 {
   border-radius: 5px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.4);
 }
 
 .backgroud {
@@ -38,8 +38,14 @@ h3 {
 }
 
 .forcast {
-  margin-left: auto;
-  margin-top: 40px;
+  display: block;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: lighter;
+  color: rgb(34, 34, 34);
+  padding: 2px 10px 20px 15px;
+  list-style: none;
 }
 .weather-today-icon {
   font-size: 80px;
@@ -74,4 +80,14 @@ footer {
 .date {
   font-size: medium;
   color: rgb(25, 7, 41);
+}
+.description {
+  display: block;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: lighter;
+  color: rgb(34, 34, 34);
+  padding: 2px 10px 20px 15px;
+  list-style: none;
 }
