--- a/src/styles.css
+++ b/src/styles.css
@@ -63,8 +63,8 @@ h3 {
   font-size: 20px;
   font-weight: lighter;
   color: rgb(34, 34, 34);
-  padding: 2px 10px 20px 15px;
   list-style: none;
+  padding: 50px;
 }
 footer {
   text-align: center;
@@ -88,6 +88,5 @@ footer {
   font-size: 20px;
   font-weight: lighter;
   color: rgb(34, 34, 34);
-  padding: 2px 10px 20px 15px;
   list-style: none;
 }
